INOA-397 Implement finding things by gateways
